fix: Make datepicker and select menus always use the specified z-indexes
- This is to ensure that they don't conflict with vendor CSS and run into CSS include order issues (which the bundler might not guarantee)

--- a/src/aux-server/aux-web/shared/vue-components/ShowInputModal/ShowInputModalGlobal.css
+++ b/src/aux-server/aux-web/shared/vue-components/ShowInputModal/ShowInputModalGlobal.css
@@ -1,3 +1,3 @@
 .md-menu-content.md-select-menu {
-    z-index: 20;
+    z-index: 20 !important;
 }
